--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 
-
+    //Circle Process Bar :
+    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
 
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
