--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,18 @@
         android:theme="@style/Theme.Mobile_Project">
 
         <activity android:name=".ui.activity.main.MainActivity"
+            android:exported="false"/>
+
+        <activity android:name=".ui.activity.input.InputActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
         </activity>
+
     </application>
 
 </manifest>
