--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         <activity android:name=".ui.activity.create.CreateHabitActivity"
             android:exported="false"/>
 
+        <activity android:name=".ui.activity.setting.HabitSettingActivity"
+            android:exported="false"/>
+
         <activity android:name=".ui.activity.input.InputActivity"
             android:exported="true">
 
