--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     //Circle Process Bar :
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
 
+    //Flexbox layout :
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
