--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     //Flexbox layout :
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
+    //Swipe layout :
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
