--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,8 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 dependencyResolutionManagement {
@@ -10,6 +12,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 rootProject.name = "Mobile_Project"
