--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.android.mobile_project"
+        applicationId "com.chu.mobile_project"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -40,7 +40,7 @@ dependencies {
     //SDP - a scalable size unit
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
-    //Room Database :
+    //Room Database
     def room_version = "2.4.2"
 
     implementation "androidx.room:room-runtime:$room_version"
@@ -61,19 +61,33 @@ dependencies {
     // optional - Paging 3 Integration
     implementation "androidx.room:room-paging:2.5.0-alpha01"
 
-    //Lombok :
+    //Lombok
     compileOnly 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
     testCompileOnly 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 
-    //Circle Process Bar :
+    //RxJava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+
+    //Dagger2
+    implementation 'com.google.dagger:dagger:2.45'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.45'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //LiveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.5.1"
+
+    //Circle Process Bar
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
 
-    //Flexbox layout :
+    //Flexbox layout
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
-    //Swipe layout :
+    //Swipe layout
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 
 
