--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,11 @@
             </intent-filter>
         </receiver>
 
+        <service
+            android:name=".utils.notification.NotificationService"
+            android:enabled="true"
+            android:exported="false" />
+
     </application>
 
 </manifest>
