--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,9 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.45'
 
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
 
     //LiveData
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.5.1"
@@ -89,6 +91,12 @@ dependencies {
 
     //Swipe layout
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+
+    //Required to avoid crash on Android 12 API 31
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+
+    //Google auth
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
