--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.android.mobile_project">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".MyApplication"
@@ -11,6 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         android:theme="@style/SplashTheme">
 
         <receiver android:name=".receiver.AlarmReceiver"/>
@@ -27,7 +31,10 @@
         <activity android:name=".ui.activity.count.CountDownActivity"
             android:exported="false"/>
 
-        <activity android:name=".ui.activity.input.InputActivity"
+        <activity android:name=".ui.activity.about.AboutUsActivity"
+            android:exported="false"/>
+
+        <activity android:name=".ui.activity.login.LoginActivity"
             android:exported="true">
 
             <intent-filter>
