complete for connect docker to building server

--- a/BE/back_end_mobile_project/pom.xml
+++ b/BE/back_end_mobile_project/pom.xml
@@ -104,6 +104,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>back-end-habit-tracer</finalName>
     </build>
     <repositories>
         <repository>
