--- a/BE/back_end_mobile_project/Dockerfile
+++ b/BE/back_end_mobile_project/Dockerfile
@@ -1,4 +1,3 @@
 FROM openjdk:11
-EXPOSE 8080
-ADD target/back_end_mobile_project-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+ADD target/back-end-habit-tracer.jar back-end-habit-tracer.jar
+ENTRYPOINT ["java","-jar","back-end-habit-tracer.jar"]
