--- a/BE/back_end_mobile_project/src/main/resources/application.properties
+++ b/BE/back_end_mobile_project/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-jwt.expirationDateInMs=3000000
-jwt.refreshExpirationDateInMs=9000000
+jwt.expirationDateInMs=300000000
+jwt.refreshExpirationDateInMs=900000000
+#spring.data.mongodb.database=habit_tracer
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.authentication-database=admin
+#server.port=8989
