--- a/FE/app/build.gradle
+++ b/FE/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
 
     //LiveData
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.5.1"
