--- a/FE/app/build.gradle
+++ b/FE/app/build.gradle
@@ -61,8 +61,6 @@ dependencies {
     // optional - Paging 3 Integration
     implementation "androidx.room:room-paging:2.5.0-alpha01"
 
-    implementation "androidx.work:work-runtime:2.5.0"
-
     //Lombok
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
@@ -96,9 +94,10 @@ dependencies {
     //Swipe layout
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 
-
     //Google auth
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
+
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
