--- a/FE/app/src/main/AndroidManifest.xml
+++ b/FE/app/src/main/AndroidManifest.xml
@@ -17,8 +17,6 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/SplashTheme">
 
-        <receiver android:name=".receiver.AlarmReceiver"/>
-
         <activity android:name=".ui.activity.main.MainActivity"
             android:exported="false"/>
 
@@ -44,7 +42,10 @@
 
         </activity>
 
-        <receiver android:name=".receiver.system.DayChangedReceiver" android:exported="false"/>
+        <receiver android:name=".receiver.local.DayChangedReceiver"
+            android:enabled="true"
+            android:exported="false"/>
+
         <receiver android:name=".receiver.system.RebootReceiver"
             android:enabled="true"
             android:exported="false">
@@ -54,7 +55,12 @@
         </receiver>
 
         <service
-            android:name=".utils.notification.NotificationService"
+            android:name=".service.NotificationService"
+            android:enabled="true"
+            android:exported="false" />
+
+        <service
+            android:name=".service.AutoInsertService"
             android:enabled="true"
             android:exported="false" />
 
