Complete for auto insert with alarm manager

--- a/FE/app/src/main/AndroidManifest.xml
+++ b/FE/app/src/main/AndroidManifest.xml
@@ -61,8 +61,7 @@
 
         <service
             android:name=".service.AutoInsertService"
-            android:enabled="true"
-            android:exported="false" />
+            android:enabled="true"/>
 
     </application>
 
