--- a/FE/app/src/main/AndroidManifest.xml
+++ b/FE/app/src/main/AndroidManifest.xml
@@ -51,6 +51,11 @@
             android:enabled="true"
             android:exported="false"/>
 
+        <receiver android:name=".receiver.system.TimeTickReceiver"
+            android:enabled="true"
+            android:exported="false"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
         <receiver android:name=".receiver.system.RebootReceiver"
             android:enabled="true"
             android:exported="false"
