--- a/FE/app/src/main/AndroidManifest.xml
+++ b/FE/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
 
     <application
         android:name=".MyApplication"
@@ -35,6 +36,9 @@
             android:exported="false"/>
 
         <activity android:name=".ui.activity.guide.GuideActivity"
+            android:exported="false"/>
+
+        <activity android:name=".ui.activity.main.CounterStepActivity"
             android:exported="false"/>
 
         <activity android:name=".ui.activity.login.LoginActivity"
